        - Installer: not correctly set Nginx log file path in Fail2ban.
        - Installer: Not set message size limit in Roundcube ($config['max_message_size']).
        - Installer: Not remove `!SSLv2` in Dovecot on Ubuntu 18.04.
          Note: SSLv2 is actually disabled by OpenSSL.

    * Updated packages:
        + Roundcube -> 1.4.2.
        + iRedAdmin -> 1.0
        + iRedAPD -> 3.4.

iRedMail-1.0:
    * Supports new distribution release:
        + OpenBSD 6.6

    * Improvements:
        - Netdata: Replace few Python modules by Go modules to collect data
          for better performance.
        - Disable email notification since netdata is too sensitive and the
          notification message is "useless".

    * Fixed issues:
        - Timeout for clamd service to load virus database is too short on
          CentOS 7.
        - Rejects the new Facebook servers which contain IP address in their
          HELO identities.

    * Updated packages:
        + Roundcube webmail -> 1.4.1
        + iRedAPD -> 3.3
        + iRedAdmin -> 0.9.9
        + netdata -> 1.19.0

iRedMail-1.0-beta2:
    * Removed OpenDMARC integration due to internal bug which caused incorrect
      email rejection. Bug reported to upstream:
      https://github.com/trusteddomainproject/OpenDMARC/issues/50

    * Improvements:
        + tools/backup_*.sh: Remove old empty backup directory.

    * Fixed issues:
        - Incorect SSL CA file path on FreeBSD.
        - Improper postrotate command for log files on Linux.

    * Updated packages:
        + iRedAPD -> 3.2
        + netdata -> 1.18.0

iRedMail-1.0-beta1:
    * Supports new distribution release:
        + OpenBSD 6.5
        + Debian 10

    * Drop support for old distribution releases:
        - OpenBSD 6.4
        - Ubuntu 16.04, 18.10.

            NOTE: We have no plan to support non-LTS edition anymore, only the
            latest LTS edition will be supported.

    * Drop support for OpenBSD ldapd backend.